[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dpack-py"
authors = [{ name = "banteg" }]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.1.0"
description = "dpack is an evm artifact package format"
requires-python = ">=3.9"
dependencies = ["pydantic >=2", "httpx", "ethpm-types"]

[tool.flit.module]
name = "dpack"

[project.optional-dependencies]
dev = ["pytest", "ruff", "eth-ape", "ape-etherscan", "setuptools"]

[tool.ruff]
line-length = 100
